added updating endpoint
